# json2db

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: config.rs  main.rs
