[package]
name = "json2db"
version = "0.1.0"
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.56"
serde_yaml = "0.8.21"
anyhow = "1.0.44"
structopt = "0.3.23"
yaml-rust = "0.4"
futures = "0.3.17"
